--- a/docs/memory/style.css
+++ b/docs/memory/style.css
@@ -24,6 +24,7 @@ button.card{
 .bcol{/*button column -- bcel is button cell*/
     float:left;
     list-style-type: none;
+    display:block;
     width:125px;
     margin:0px 5px;
     padding:0;
@@ -37,11 +38,64 @@ button.card{
     height:100%;
 }
 #gridbox{
-    width:100%;
+    max-width:max-content;
+    min-width:max-content;
     overflow:hidden;
     margin:0;
     padding:0;
 }
+select, button{
+    font-size:10pt;
+}
+#quitbtn{
+    float:right;
+}
 #warn{
     display:none;
+}
+#indicator{
+    width:95px;
+    height:95px;
+    float:right;
+    display:none;
+}
+#scorebox{
+    /*I don't know if you can apply overflow/max-height to a list object*/
+    display:none;
+    position:absolute;
+    top:15%;
+    left:50%;
+    transform:translate(-50%);
+    max-height:50%;
+    min-width:max-content;
+    overflow:scroll;
+
+    text-align:center;
+    background-color:lightgray;
+    border-radius: 8px;
+    font-size:20pt;
+}
+#oneScore{
+    display:none;
+    position:absolute;
+    bottom:50%;
+    left:50%;
+    transform:translate(-50%);
+    text-align:center;
+
+    border-style:solid;
+    border-width:4px;
+    border-radius:12px;
+    border-color:lightyellow;
+    background-color:papayawhip;
+    font-size:36;
+}
+#scorelist{
+    list-style-type: none;
+    display:block;
+    padding:30px;
+    margin:0;
+}
+#scorelist>li{
+    text-align:center;
 }
