huge commit put in all of the things from last time, with some edits all that's left is styling and making sure/hoping github pages knows how to deal with this

--- a/docs/src/Content.css
+++ b/docs/src/Content.css
@@ -1,3 +1,9 @@
+.ContentContainer{
+  padding: 2em;
+}
 .Content{
-  /* CSS HERE */
+  padding: 1em;
+}
+.Content-Related-Head{
+  margin-bottom: 1em;
 }
